--- a/src/net/bidimensional/camilla/Bundle.properties
+++ b/src/net/bidimensional/camilla/Bundle.properties
@@ -177,7 +177,7 @@ DataResultViewerTable.pagePrevButton.text=
 DataResultViewerTable.pagesLabel.text=Pages:
 DataResultViewerTable.pageNumLabel.text=
 DataResultViewerTable.pageLabel.text=Page:
-CamillaViewerTable.exportCSVButton.text=Save Graph to Image
+CamillaViewerTable.exportPNGButton.text=Download Graph as an Image
 MultiUserSettingsPanel.tbSolr4Hostname.toolTipText=Solr 4 Hostname or IP Address
 MultiUserSettingsPanel.tbSolr4Port.toolTipText=Solr 4 Port Number
 MultiUserSettingsPanel.lbZkSettings.text=ZooKeeper Server Settings
