--- a/src/net/bidimensional/camilla/Bundle.properties
+++ b/src/net/bidimensional/camilla/Bundle.properties
@@ -1,3 +1,5 @@
+# Forked from Autopsy
+
 OpenIDE-Module-Name=Camilla
 
 CTL_CustomAboutAction=About
@@ -14,8 +16,6 @@ DataContentViewerHex.currentPageLabel.text_1=1
 DataContentViewerHex.ofLabel.text_1=of
 DataContentViewerHex.totalPageLabel.text_1=100
 DataContentViewerHex.pageLabel2.text=Page
-#Camilla.firstColLbl = Name
-#Camilla.title = Camilla Graph Builder
 
 # Product Information panel
 LBL_Description=<div style=\"font-size: 12pt; font-family: Verdana, 'Verdana CE',  Arial, 'Arial CE', 'Lucida Grande CE', lucida, 'Helvetica CE', sans-serif;\">\n    <b>Product Version:</b> {0} ({9}) <br><b>Sleuth Kit Version:</b> {7} <br><b>Netbeans RCP Build:</b> {8} <br> <b>Java:</b> {1}; {2}<br> <b>System:</b> {3}; {4}; {5}<br><b>Userdir:</b> {6}</div>
