--- a/src/net/bidimensional/camilla/graphbuilder/Bundle.properties
+++ b/src/net/bidimensional/camilla/graphbuilder/Bundle.properties
@@ -1,3 +1,4 @@
+# Fork from Autopsy
 OpenIDE-Module-Name=Camilla
 
 CTL_CustomAboutAction=About
@@ -177,7 +178,10 @@ DataResultViewerTable.pagePrevButton.text=
 DataResultViewerTable.pagesLabel.text=Pages:
 DataResultViewerTable.pageNumLabel.text=
 DataResultViewerTable.pageLabel.text=Page:
+
 CamillaViewerTable.exportPNGButton.text=Download Graph as an Image
+CamillaViewerTable.saveGraphButton.text=Save Graph as part of the Case
+
 MultiUserSettingsPanel.tbSolr4Hostname.toolTipText=Solr 4 Hostname or IP Address
 MultiUserSettingsPanel.tbSolr4Port.toolTipText=Solr 4 Port Number
 MultiUserSettingsPanel.lbZkSettings.text=ZooKeeper Server Settings
