--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,4 +9,7 @@ file.reference.javafx.web.jar=release/modules/ext/javafx.web.jar
 file.reference.sqlite-jdbc-3.42.0.0.jar=release/modules/ext/sqlite-jdbc-3.42.0.0.jar
 javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
+license.file=../../Users/danie/Downloads/apache.org_licenses_LICENSE-2.0.txt
+nbm.homepage=https://github.com/danieledagnelli/camilla
+nbm.module.author=Daniele D'Agnelli
 nbm.needs.restart=true
