--- a/src/net/bidimensional/camilla/Bundle.properties
+++ b/src/net/bidimensional/camilla/Bundle.properties
@@ -1,10 +1,14 @@
 # Forked from Autopsy
 
-OpenIDE-Module-Name=Camilla
+OpenIDE-Module-Display-Category=CAMILLA: Contextual Autopsy Mapping Integrated Linking Layer
+OpenIDE-Module-Long-Description=\
+    Camilla allows users to interact with the artefacts discovered and facilitatse the creation of standardised visualisations to enrich Digital Forensics reports.
+OpenIDE-Module-Name=CAMILLA
 
 CTL_CustomAboutAction=About
 CTL_DataContentAction=DataContent
 CTL_DataContentTopComponent=Data Content
+OpenIDE-Module-Short-Description=Artefacts Graph Builder and Reporting
 OptionsCategory_Name_General=Application
 OptionsCategory_Keywords_General=Autopsy Options
 HINT_DataContentTopComponent=This is a DataContent window
