--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,5 +11,5 @@ javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
 license.file=../../Users/danie/Downloads/apache.org_licenses_LICENSE-2.0.txt
 nbm.homepage=https://github.com/danieledagnelli/camilla
-nbm.module.author=Daniele D'Agnelli
+nbm.module.author=Daniele D'Agnelli @ Abertay University
 nbm.needs.restart=true
