--- a/src/net/bidimensional/camilla/Bundle.properties
+++ b/src/net/bidimensional/camilla/Bundle.properties
@@ -2,7 +2,7 @@
 
 OpenIDE-Module-Display-Category=CAMILLA: Contextual Autopsy Mapping Integrated Linking Layer
 OpenIDE-Module-Long-Description=\
-    Camilla allows users to interact with the artefacts discovered and facilitatse the creation of standardised visualisations to enrich Digital Forensics reports.
+    Camilla allows users to interact with the artefacts discovered and facilitate the creation of standardised visualisations to enrich Digital Forensics reports.
 OpenIDE-Module-Name=CAMILLA
 
 CTL_CustomAboutAction=About
